<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>io.spring.example</groupId>
	<artifactId>couchbase-stream-applications</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>couchbase-stream-applications</name>
	<packaging>pom</packaging>
	<description>Demo Stream Applications project for Couchhbase</description>

	<properties>
		<java.version>8</java.version>
		<spring-cloud.version>2020.0.0-M5</spring-cloud.version>
		<playtika-testcontainers.version>1.86</playtika-testcontainers.version>
		<couchbase-java-client.version>3.0.10</couchbase-java-client.version>
		<test-containers.version>1.15.0</test-containers.version>
	</properties>


	<modules>
		<module>couchbase-consumer</module>
		<module>couchbase-sink</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.couchbase.client</groupId>
				<artifactId>java-client</artifactId>
				<version>${couchbase-java-client.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${test-containers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>

		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<groups>integration</groups>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<groups>!integration</groups>
				</configuration>
			</plugin>
		</plugins>
	</build>


</project>
